tests/expected_invalid_public_proves_private_proof.diag.out
<input>:6:37: error: public API cannot reference private type 'Receipt'
    public fn validate() -> Unit proves Receipt
                                        ^^^^^^^
